--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "vite": "4.0.1",
+    "vitest": "0.25.8"
   },
   "volta": {
     "node": "18.12.1",
